fix(themes: highcontrast): missing border color in newtab button after merge

--- a/webextensions/sidebar/styles/square/highcontrast.css
+++ b/webextensions/sidebar/styles/square/highcontrast.css
@@ -60,6 +60,7 @@
 }
 
 .newtab-button-box {
+  border-color: ThreeDHighlight;
   border-style: solid;
   border-width: 1px;
 }
